--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,9 @@ body {
     background-color: white;
 }
 
+.container .title {
+  color: red;
+}
 /* aparece somente quando a tela é menor que 600px */
 @media (min-width: 600px) and (max-width: 700px){
     h2{
